[OID4VCI] Make natural_person configuration available in all formats
Signed-off-by: Thomas Diesler <tdiesler@ibm.com>