@@ -34,13 +34,13 @@ import org.keycloak.models.oid4vci.Oid4vcProtocolMapperModel;
 import org.keycloak.protocol.ProtocolMapper;
 import org.keycloak.protocol.oid4vc.OID4VCEnvironmentProviderFactory;
 import org.keycloak.protocol.oid4vc.OID4VCLoginProtocolFactory;
-import org.keycloak.protocol.oid4vc.model.Format;
 import org.keycloak.protocol.oid4vc.model.VerifiableCredential;
 import org.keycloak.provider.ProviderConfigProperty;
 
 import org.apache.commons.collections4.ListUtils;
 
 import static org.keycloak.OID4VCConstants.CREDENTIAL_SUBJECT;
+import static org.keycloak.VCFormat.SD_JWT_VC;
 
 /**
  * Base class for OID4VC Mappers, to provide common configuration and functionality for all of them
@@ -118,10 +118,11 @@ public abstract class OID4VCMapper implements ProtocolMapper, OID4VCEnvironmentP
     }
 
     protected List<String> getAttributePrefix() {
-        return switch (Optional.ofNullable(format).orElse("")) {
-            case Format.JWT_VC, Format.LDP_VC -> List.of(CREDENTIAL_SUBJECT);
-            default -> Collections.emptyList();
-        };
+        if (SD_JWT_VC.equals(format)) {
+            return Collections.emptyList();
+        } else {
+            return List.of(CREDENTIAL_SUBJECT);
+        }
     }
 
     @Override
